# Minecraft

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  physics.hpp  player.hpp  renderer.hpp  screen.hpp  shader.hpp  world.hpp
include/glad/: glad.h
include/inventory/: inventory.h  item.h
include/renderer/: gui.hpp  mesh.hpp  model.hpp  renderer.hpp  shader.hpp  texture.hpp  vertex.hpp
include/world/: block.hpp  world.hpp
rsrc/: 7.3.camera.vs  line.vs
src/: block.cpp  camera.cpp  glad.c  gui.cpp  main.cpp  mesh.cpp  model.cpp  physics.cpp  player.cpp  renderer.cpp  screen.cpp  shader.cpp  texture.cpp  world.cpp
